--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -161,6 +161,9 @@
   letter-spacing: 0.6px;
 }
 
+a {
+   text-decoration: none;
+}
 .lower-reg {
   width: 30%;
   height: auto;
@@ -176,6 +179,7 @@
   gap:22px;
   padding-left: 20px;
   padding-right: 20px;
+  
  
 
  
