--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -500,7 +500,7 @@ a {
   width: 80%;
   height: 70%;
   margin: 6%;
-  background-image: url("../assets/banner.png");
+  background-image: url("../assets/banner.webp");
   background-repeat: no-repeat;
   background-position: left center;
   background-size: contain;
@@ -625,7 +625,7 @@ a {
 .lower-banners {
   border: 1px solid #000;
   padding: 2%;
-  background-image: url("../assets/bg3.png");
+  background-image: url("../assets/bg3.webp");
   box-shadow: 0px 4px 20px -1px rgba(0, 0, 0, 0);
   background-repeat: no-repeat;
   background-position: center center;
