--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -36,6 +36,14 @@
   width: 250px;
   height: 586px;
 }
+.right-gradient img{
+  width: 100%;
+}
+.left-gradient img{
+  width: 120%;
+  
+
+}
 .card {
   margin-left: 3%;
   width: 92%;
