--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,17 @@
   pointer-events: none;
 }
 
+.fallback {
+  position: fixed; /* Fixed position to cover the entire viewport */
+  top: 0;
+  left: 0;
+  width: 100vw; /* Full width */
+  height: 100vh; /* Full height */
+  background-color:  #021a60; /* Black background color */
+ 
+}
+
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
